tests/NormalTests/paczka1/fuzzy1/76094267.err
Error in line 2: lvjto A577 33,8
Error in line 4: A4aibpPHR5D A758 65,1
Error in line 7: A4aibpPHR5D S946 88,8
Error in line 20: A4aibpPHR5D A508 90,3
Error in line 22: VNJ7dQ A758 45,5
